py.install_sources(
    [
        '__init__.py',
        'constants.py',
        'types.py',
        'types_test.py',
        'version.py',
    ],
    subdir: 'tensorflow_data_validation',
)

subdir('anomalies')
subdir('api')
subdir('arrow')
subdir('coders')
subdir('integration_tests')
subdir('pywrap')
subdir('skew')
subdir('statistics')
subdir('utils')
