py.install_sources(
  '__init__.py',
  subdir: 'tensorflow_data_validation/anomalies'
)

anomalies_src_files = [
    'bool_domain_test.cc',
    'bool_domain_util.cc',
    'custom_domain_util.cc',
    'custom_domain_util_test.cc',
    'custom_validation.cc',
    'custom_validation_test.cc',
    'dataset_constraints_util.cc',
    'dataset_constraints_util_test.cc',
    'diff_util.cc',
    'feature_statistics_validator.cc',
    'feature_statistics_validator_test.cc',
    'feature_util.cc',
    'feature_util_test.cc',
    'features_needed.cc',
    'features_needed_test.cc',
    'float_domain_test.cc',
    'float_domain_util.cc',
    'image_domain_test.cc',
    'image_domain_util.cc',
    'int_domain_test.cc',
    'int_domain_util.cc',
    'map_util.cc',
    'map_util_test.cc',
    'metrics.cc',
    'metrics_test.cc',
    'natural_language_domain_util.cc',
    'path.cc',
    'path_test.cc',
    'schema.cc',
    'schema_anomalies.cc',
    'schema_anomalies_test.cc',
    'schema_test.cc',
    'schema_util.cc',
    'schema_util_test.cc',
    'statistics_view.cc',
    'statistics_view_test.cc',
    'statistics_view_test_util.cc',
    'string_domain_test.cc',
    'string_domain_util.cc',
    'telemetry.cc',
    'test_schema_protos.cc',
    'test_util.cc',
    'test_util_test.cc',
]
