py.install_sources(
    [
        'stats_impl_test.py',
        'stats_impl.py',
        'stats_options.py',
        'generators/stats_generator.py',
        'generators/basic_stats_generator.py',
        'generators/sparse_feature_stats_generator.py',
        'generators/input_batch.py',
        'generators/top_k_uniques_stats_generator.py',
        'generators/lift_stats_generator.py',
        'generators/image_stats_generator_test.py',
        'generators/empty_value_counter_generator.py',
        'generators/sklearn_mutual_information.py',
        'generators/natural_language_domain_inferring_stats_generator.py',
        'generators/sparse_feature_stats_generator_test.py',
        'generators/image_stats_generator.py',
        'generators/lift_stats_generator_test.py',
        'generators/cross_feature_stats_generator_test.py',
        'generators/top_k_uniques_stats_generator_test.py',
        'generators/partitioned_stats_generator_test.py',
        'generators/partitioned_stats_generator.py',
        'generators/mutual_information_test.py',
        'generators/constituents/count_missing_generator.py',
        'generators/constituents/count_missing_generator_test.py',
        'generators/constituents/length_diff_generator.py',
        'generators/constituents/length_diff_generator_test.py',
        'generators/constituents/__init__.py',
        'generators/natural_language_stats_generator.py',
        'generators/weighted_feature_stats_generator.py',
        'generators/weighted_feature_stats_generator_test.py',
        'generators/mutual_information.py',
        'generators/empty_value_counter_generator_test.py',
        'generators/cross_feature_stats_generator.py',
        'generators/time_stats_generator_test.py',
        'generators/natural_language_stats_generator_test.py',
        'generators/sklearn_mutual_information_test.py',
        'generators/input_batch_test.py',
        'generators/natural_language_domain_inferring_stats_generator_test.py',
        'generators/basic_stats_generator_test.py',
        'generators/top_k_uniques_sketch_stats_generator_test.py',
        'generators/top_k_uniques_sketch_stats_generator.py',
        'generators/__init__.py',
        'generators/time_stats_generator.py',
        'stats_options_test.py',
        '__init__.py',
    ],
    subdir: 'tensorflow_data_validation/statistics',
)
