py.install_sources(
    [
        '__init__.py',
        'anomalies_util.py',
        'anomalies_util_test.py',
        'artifacts_io_impl.py',
        'artifacts_io_impl_test.py',
        'batch_util.py',
        'batch_util_test.py',
        'beam_runner_util.py',
        'bin_util.py',
        'bin_util_test.py',
        'display_util.py',
        'display_util_test.py',
        'example_weight_map.py',
        'example_weight_map_test.py',
        'feature_partition_util.py',
        'feature_partition_util_test.py',
        'io_util.py',
        'io_util_test.py',
        'metrics_util.py',
        'mutual_information_util.py',
        'mutual_information_util_test.py',
        'path.py',
        'preprocessing_util.py',
        'quantiles_util.py',
        'quantiles_util_test.py',
        'schema_util.py',
        'schema_util_test.py',
        'slicing_util.py',
        'slicing_util_test.py',
        'stats_gen_lib.py',
        'stats_gen_lib_test.py',
        'stats_util.py',
        'stats_util_test.py',
        'test_util.py',
        'test_util_test.py',
        'top_k_uniques_stats_util.py',
        'top_k_uniques_stats_util_test.py',
        'validation_lib.py',
        'validation_lib_test.py',
        'variance_util.py',
        'variance_util_test.py',
        'vocab_util.py',
        'vocab_util_test.py',
    ],
    subdir: 'tensorflow_data_validation/utils',
)
